# PythonRoutines

./: .gitignore  .gitmodules  README.md  pyproject.toml
dev/: setup_symlinks.sh
flash_ssd_sims/analysis/: collect_sim_spectra.py  compute_curvature_stats.py  compute_dissipation_function_spectra.py  compute_velocity_gradient_tensor_spectra.py  measure_SSD_phases.py  plot_converged_scales.py  plot_nres_study.py  plot_sim_data.py  plot_vi_data.py
flash_ssd_sims/utils/: create_sub_folders.py  delete_old_files.py  get_SSD_job_progress.py  h5del.py  organise_SSD_folders.py  process_plt_files.py  reduce_data_in_SSD_phases.py  restart_sim.py  restart_sim_from_scratch.py  setup_SSD_sims.py  setup_curvature_jobs.py  setup_processing_jobs.py  tune_SSD_driving.py
julia/: .gitignore  setup_symlinks.sh
julia/loki/: Manifest.toml  Project.toml
julia/loki/src/: PowerSpectra.jl
julia/thor/: Project.toml  README.md
julia/thor/src/: CorrelationFunctions.jl
julia/valkyrja/: Project.toml  README.md
julia/valkyrja/src/: EnergyTransfer.jl
python/: README.md  link_modules_as_editable.py  pyproject.toml  setup_submodules.py
python/bifrost/: notes.txt
python/bifrost/src/bifrost/: axes_manager.py  datasets_manager.py  hdf5_manager.py
python/bifrost/tests/: all_tests.py
python/jormi/: pyproject.toml
python/jormi/src/jormi/utils/: TODO.txt  dict_utils.py  func_utils.py  list_utils.py  var_utils.py
python/jormi/src/jormi/ww_data/: finite_difference.py  interpolate_data.py  smooth_data.py
python/jormi/src/jormi/ww_fields/: TODO.txt  compute_spectra.py  decompose_fields.py  derive_fields.py
python/jormi/src/jormi/ww_io/: argparse.py  csv_files.py  directory_manager.py  json_files.py
python/jormi/src/jormi/ww_io/flash_data/: _read_grid_data.py  _read_vi_data.py
python/jormi/src/jormi/ww_jobs/: pbs_jobs.py
python/jormi/src/jormi/ww_plots/: TODO.txt  add_annotations.py  plot_data.py  plot_manager.py  plot_styler.py
python/jormi/tests/utils/: test_dict_utils.py  test_list_utils.py
python/jormi/tests/ww_data/: test_estimated_1d_pdfs.py
python/jormi/tests/ww_fields/: test_helmholtz_decomposition.py
python/jormi/tests/ww_io/: test_csv_files.py  test_json_files.py
python/submodules/bifrost/: .gitignore  README.md  pyproject.toml
python/submodules/jormi/: README.md
python/submodules/jormi/playground/: interpolate_and_estimate_gradients.py
python/submodules/jormi/src/jormi/utils/: func_utils.py  list_utils.py
python/submodules/jormi/src/jormi/ww_data/: TODO.txt  compute_stats.py  fit_data.py
python/submodules/jormi/src/jormi/ww_fields/: field_operators.py  generate_fields.py
python/submodules/jormi/src/jormi/ww_io/: TODO.txt  csv_files.py  directory_manager.py  file_manager.py  json_files.py  shell_manager.py
python/submodules/jormi/src/jormi/ww_io/flash_data/: __init__.py  _read_vi_data.py
python/submodules/jormi/src/jormi/ww_plots/: add_color.py  plot_data.py
python/submodules/jormi/tests/utils/: test_list_utils.py  test_var_utils.py
python/submodules/jormi/tests/ww_data/: test_compute_p_norm.py  test_estimated_2d_jpdf.py  test_finite_difference_convergence.py
python/submodules/jormi/tests/ww_fields/: test_power_spectrum.py
python/submodules/jormi/tests/ww_io/: test_csv_files.py  test_flash_sfield_reformating.py  test_json_files.py
python/submodules/vegtamr/: README.md
python/submodules/vegtamr/playground/: demo_script.py
python/submodules/vegtamr/src/vegtamr/lic/: __init__.py  _api.py  _parallel.py  example_parallel.py
python/vegtamr/: .gitignore  MANIFEST.in  pyproject.toml
python/vegtamr/src/vegtamr/lic/: _core.py  _serial.py
python/vegtamr/src/vegtamr/utils/: _postprocess.py  vfields.py
python/ww_arepo/: pyproject.toml
python/ww_flash/: pyproject.toml  ssd_sims.py
python/ww_flash/manager/: ssd_sim.py
python/ww_flash/manager/setup/: check_progress.py
python/ww_flash/plot/: plot_vi_data.py
python/ww_flash/setup/: setup_command.txt
python/ww_flash/src/ww_flash/io/: _read_grid_data.py  _read_vi_data.py
python/ww_flash/src/ww_flash/manager/: ssd_sim.py
python/ww_flash/src/ww_flash/manager/maintainance/: cleaner.py
python/ww_flash/src/ww_flash/sim_utils/: ssd_sim_directories.txt  ssd_sims.py
python/ww_flash/tests/io/: test_sfield_reformating.py
python/ww_flash/utils/: file_names.py  save_ssd_sim_directories.py  sim_params.py
python/ww_quokka/: pyproject.toml
src/sindri_cli/: .style.yapf  format_python_files.py  link_python_modules.py  link_sindri_modules.py  link_sindri_packages.py
tools/: install.sh  uninstall.sh  update.sh
tools/cli/: .style.yapf  format_python_files.py  sindri_packages.py
tools/sindri_cli/: format_python_files.py  sindri_packages.py
ww_flash/ssd_sims/ProcessSims/: FileNames.py
ww_flash/ssd_sims/plot/: plot_vi_data.py  pyproject.toml
ww_flash/ssd_sims/process/: pyproject.toml
ww_flash/ssd_sims/setup/: FileNames.py  pyproject.toml
ww_flash_ssd_sims/utils/: delete_hdf5_dataset.py
wwflash/analysis/: compute_dissipation_function_spectra.py  compute_velocity_gradient_tensor_spectra.py  measure_SSD_phases.py  plot_box_data.py  plot_converged_scales.py  plot_vi_data.py
wwflash/utils/: archive_cf.py  archive_files.py  check_files.py  count_sim_files.py  create_sub_folders.py  delete_old_files.py  delete_sat_data.py  download_from_gadi.py  get_SSD_job_progress.py  move_files_between_projects.py  move_files_to_subfolder.py  process_plt_files.py  reduce_data_in_SSD_phases.py  restart_sim.py  restart_sim_from_scratch.py  setup_SSD_sims.py  setup_processing_jobs.py  touch_files.py  tune_SSD_driving.py
