[project]
name = "sindri-cli"
version = "0.1.0"
description = "CLI helpers for Sindri"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jormi",
]

[tool.uv.sources]
jormi = { path = "submodules/jormi" }

## (run from the repo root)
## install via: `uv tool install --editable .`
## update via: `uv tool upgrade --reinstall sindri-cli`
## uninstall via: `uv tool uninstall sindri-cli`
## check installed uv tools: `uv tool list`
## refresh lookup via: `hash -r`
[project.scripts]
format-python-files = "sindri_cli.format_python_files:main"
link-sindri-modules = "sindri_cli.link_sindri_modules:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sindri_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/sindri_cli/.style.yapf" = "sindri_cli/.style.yapf"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["src"]
extraPaths = ["submodules/jormi/src"]
reportMissingImports = true
reportMissingTypeStubs = false
