[project]
name = "sindri-cli"
version = "0.1.0"
description = "CLI helpers for Sindri"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jormi",
  "libcst",
]

[tool.uv.sources]
jormi = { path = "submodules/jormi", editable = true }

[project.scripts]
format-python-files = "sindri_cli.format_python_files:main"
sindri-packages = "sindri_cli.sindri_packages:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/sindri_cli"]

[tool.hatch.build.targets.wheel.force-include]
"tools/sindri_cli/.style.yapf" = "sindri_cli/.style.yapf"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["tools/sindri_cli"]
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnusedParameter = false
reportImplicitOverride = false
