[project]
name = "sindri-cli"
version = "0.1.0"
description = "CLI helpers for Sindri"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jormi",
  "libcst",
]

[tool.uv.sources]
jormi = { path = "submodules/jormi", editable = true }

[project.scripts]
format-python-files = "cli.format_python_files:main"
sindri-packages = "cli.sindri_packages:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/cli"]

[tool.hatch.build.targets.wheel.force-include]
"tools/cli/.style.yapf" = "cli/.style.yapf"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["tools/cli"]
venvPath = "."
venv = ".venv"

## --- rules to enforce
reportMissingImports = true

## --- rules to suppress
reportMissingTypeStubs = "none"  # libcst and jormi ship no stubs; not actionable
reportUnknownVariableType = "none"  # cascade from untyped deps (jormi); not actionable
reportUnknownMemberType = "none"  # cascade from untyped deps (jormi); not actionable
reportUnknownParameterType = "none"  # cascade from untyped deps (libcst); not actionable
reportUnknownArgumentType = "none"  # cascade from untyped deps (tomllib dicts); not actionable
reportUnusedParameter = "none"  # override methods must match base signature even if arg unused
reportImplicitOverride = "none"  # @override requires Python 3.12; project targets 3.11
reportAny = "none"  # cascade from tomllib returning untyped dicts; not actionable
reportUnusedCallResult = "none"  # argparse.add_argument returns Action; never used by convention
reportImplicitStringConcatenation = "none"  # implicit string concat used intentionally in long strings
