[project]
name = "sindri"
version = "0.1.0"
description = "sindri: routines for doing science"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jormi",
  "bifrost",
  "vegtamr",
]

[tool.uv.sources]
jormi = { path = "submodules/jormi" }
bifrost = { path = "submodules/bifrost" }
vegtamr = { path = "submodules/vegtamr" }

