[project]
name = "vegtamr"
version = "0.1.0"
description = "vegtamr: a line integral convolution library"
readme = "README.md"
authors = [
    { name = "Neco Kriel", email = "necokriel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "rlic>=0.3.3",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
