[project]
name = "ww_flash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Neco Kriel", email = "necokriel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
  "jormi"
]

[tool.uv.sources]
jormi = { path = "../submodules/jormi" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]